Bug fix: button sintaxe

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,6 @@
   <ion-item>
     <ion-label stacked>Resultado: {{ resultado }} </ion-label>
   </ion-item>
-  <button ion-button block (click)="calcular()">Calcular </button>
+  <ion-button expand="block" (click)="calcular()">Calcular </ion-button>
 
 </ion-content>
